force-app/main/default/objects/Competitor_Product__c/fields/Approvals__c.field-meta.xml
<CustomField>
    <fullName>Approvals__c</fullName>
    <inlineHelpText>Passed approvals and certifications</inlineHelpText>
    <label>Approvals</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>