force-app/main/default/objects/Competitor_Product__c/fields/Closest_uB_Product__c.field-meta.xml
<CustomField>
    <fullName>Closest_uB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pick the u-blox product that comes closest to the functionality of this competitor product.</inlineHelpText>
    <label>Closest uB Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Competitor Products</relationshipLabel>
    <relationshipName>Competitor_Products</relationshipName>
    <type>Lookup</type>
</CustomField>