force-app/main/default/objects/Competitor_Product__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Competitor name that produces this Competitor Product</description>
    <inlineHelpText>Competitor name that produces this Competitor Product</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitor Products</relationshipLabel>
    <relationshipName>Competitor_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>