force-app/main/default/objects/Competitor_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description and notes</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>