force-app/main/default/objects/Competitor_Product__c/fields/Interfaces__c.field-meta.xml
<CustomField>
    <fullName>Interfaces__c</fullName>
    <inlineHelpText>Communication interfaces of product</inlineHelpText>
    <label>Interfaces</label>
    <length>60</length>
    <type>Text</type>
</CustomField>