force-app/main/default/objects/Competitor_Product__c/fields/Link_TWiki__c.field-meta.xml
<CustomField>
    <fullName>Link_TWiki__c</fullName>
    <inlineHelpText>Link to advanced information (benchmark data, data sheet) on TWiki</inlineHelpText>
    <label>Link TWiki</label>
    <type>Url</type>
</CustomField>