force-app/main/default/objects/Competitor_Product__c/fields/Link_website__c.field-meta.xml
<CustomField>
    <fullName>Link_website__c</fullName>
    <inlineHelpText>Link to product website.</inlineHelpText>
    <label>Link website</label>
    <type>Url</type>
</CustomField>