force-app/main/default/objects/Competitor_Product__c/fields/Mounting__c.field-meta.xml
<CustomField>
    <fullName>Mounting__c</fullName>
    <inlineHelpText>Mounting technology of package</inlineHelpText>
    <label>Mounting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMT</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>LGA</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>