force-app/main/default/objects/Competitor_Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <inlineHelpText>Select applicable product categories</inlineHelpText>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Position &amp; Time</fullName>
            </value>
            <value>
                <fullName>Short Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>