force-app/main/default/objects/Competitor_Product__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Short description of product</inlineHelpText>
    <label>Short Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>