force-app/main/default/objects/Competitor_Product__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>L x W x H of chip or module, in mm</inlineHelpText>
    <label>Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>