force-app/main/default/objects/Competitor_Product__c/fields/Start_of_Mass_Production__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Mass_Production__c</fullName>
    <inlineHelpText>Actual or planned data of MP</inlineHelpText>
    <label>Start of Mass Production</label>
    <length>30</length>
    <type>Text</type>
</CustomField>