force-app/main/default/objects/Competitor_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Product status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Mass Production</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>