force-app/main/default/objects/Competitor_Product__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <description>Additional information on the status, e.g. actual or planned date of mass production</description>
    <inlineHelpText>Additional information on the status, e.g. actual or planned date of mass production</inlineHelpText>
    <label>Status Comment</label>
    <type>TextArea</type>
</CustomField>