force-app/main/default/objects/Competitor_Product__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Strengths compared to u-blox offering / product</inlineHelpText>
    <label>Strengths</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>