force-app/main/default/objects/Competitor_Product__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Weaknesses compared to u-blox offering / product.</inlineHelpText>
    <label>Weaknesses</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>