force-app/main/default/objects/Competitor_Product__c/fields/Wireless_Technology__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Technology__c</fullName>
    <inlineHelpText>Select the most advanced technology supported by the product</inlineHelpText>
    <label>Wireless Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPRS</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>UMTS</fullName>
            </value>
            <value>
                <fullName>HSDPA</fullName>
            </value>
            <value>
                <fullName>HSUPA</fullName>
            </value>
            <value>
                <fullName>not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>