force-app/main/default/objects/Competitor_Product__c/listViews/Competitor_Products_POS.listView-meta.xml
<ListView>
    <fullName>Competitor_Products_POS</fullName>
    <columns>NAME</columns>
    <columns>Competitor__c</columns>
    <columns>Product_Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>equals</operation>
        <value>Position &amp; Time</value>
    </filters>
    <label>Competitor Products POS</label>
</ListView>